# svea_data_manager

./: .gitignore  LICENSE  README.md  config.yaml  logger.py  main_flet_gui.py  main_simple_tkinter_gui.py  pyproject.toml  requirements.txt
ifcb/: analyzes_json.py  app_pull_ifcb_from_archive.py  hdr_file.py  ifcb_summary.py  mat_file.py
ifcb/archive/: __init__.py
src/svea_data_manager/: __init__.py
src/svea_data_manager/frameworks/: __init__.py  exceptions.py  instrument.py  package.py  resource.py
src/svea_data_manager/gui/: simple_customtkinter_app.py  simple_tkinter_app.py  tooltip_texts.py
src/svea_data_manager/ifcb/: app_pull_ifcb_from_archive.py  basin.py  ifcb_summary.py  mat_file.py  metadata.py
src/svea_data_manager/ifcb/archive/: data_raw.py  results.py
src/svea_data_manager/instruments/: __init__.py  adcp.py  ctd.py  ifcb.py  ifcb_classification.py  mvp.py
svea_data_manager/: __init__.py  ferrybox.py  helpers.py  mvp.py  sdm_event.py  sdm_logger.py  utils.py
svea_data_manager/frameworks/: __init__.py  exceptions.py  helpers.py  instrument.py  package.py  resource.py  storage.py
svea_data_manager/gui/: config.yaml  config_ifcb.yaml  config_test.yaml  flet_app.py  latest_config.yaml  simple_tkinter_app.py
svea_data_manager/instruments/: __init__.py  adcp.py  ctd.py  ferrybox.py  ifcb.py  mvp.py
